[gd_scene load_steps=3 format=3 uid="uid://c8adc4vjcpqsb"]

[ext_resource type="Script" uid="uid://bk5jw7kujpsvv" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[sub_resource type="LabelSettings" id="LabelSettings_n87rw"]
font_size = 52

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n87rw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.26666668, 0.26666668, 0.26666668, 0.4117647)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="StartLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -11.5
offset_right = 58.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS ANY KEY"
label_settings = SubResource("LabelSettings_n87rw")
